[package]
name = "ucx_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
derivative = "2.2.0"
libc = "0.2.161"
socket2 = "0.5.7"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ucx1-sys = { version = "0.1.0", path = "./ucx1-sys" } 
